--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,57 @@
+@font-face {
+  font-family: "playfair-reg";
+  src: url(../public/assets/Playfair_Display/static/PlayfairDisplay-Regular.ttf);
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  height: auto;
+  margin: auto;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+header .logo {
+  width: 100%;
+}
+header .nav_bar {
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
+  margin: 10px 0;
+  position: sticky;
+  top: 20px;
+}
+header .nav_bar_element {
+  list-style-type: none;
+  font-family: "playfair-reg";
+  font-size: 18px;
   color: #000;
 }
-body:hover {
-  color: #fff;
+
+h1 {
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 50px;
+}
+footer .intern-div_footer {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
