--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,81 @@
-body {
-    color: #000;
+@mixin flex-column-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    &:hover {
-        color: #fff;
+$white: #fff;
+$grey: #666;
+$black: #000;
+
+@font-face {
+    font-family: "playfair-reg";
+    src: url(../public/assets/Playfair_Display/static/PlayfairDisplay-Regular.ttf);
+}
+
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: auto;
+    margin: auto;
+}
+
+header {
+    @include flex-column-center;
+    position: relative;
+
+
+
+    // .logo_div {
+    //     @include flex-column-center;
+    // }
+
+    .logo {
+
+        width: 100%;
+
     }
+
+    .nav_bar {
+        display: flex;
+        justify-content: space-between;
+        width: 35%;
+        margin: 10px 0;
+        position: sticky;
+        top: 20px;
+
+    }
+
+    .nav_bar_element {
+        list-style-type: none;
+        font-family: "playfair-reg";
+        font-size: 18px;
+        color: $black;
+    }
+
+
+
+
+}
+
+h1 {
+    text-align: center;
+}
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 50px;
+
+    .intern-div_footer {
+        padding: 10px;
+        @include flex-column-center;
+    }
+
 }
