--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,9 +19,6 @@ header {
   align-items: center;
   position: relative;
 }
-header .logo {
-  width: 100%;
-}
 header .nav_bar {
   display: flex;
   justify-content: space-between;
@@ -35,6 +32,20 @@ header .nav_bar_element {
   font-family: "playfair-reg";
   font-size: 18px;
   color: #000;
+  position: sticky;
+}
+
+section {
+  display: flex;
+}
+section .testimonies {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px 10px;
+}
+section > div p {
+  text-align: justify;
 }
 
 h1 {
@@ -46,6 +57,7 @@ footer {
   justify-content: space-around;
   width: 100%;
   margin-top: 50px;
+  background-color: #666;
 }
 footer .intern-div_footer {
   padding: 10px;
