--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,18 +29,6 @@ header {
     @include flex-column-center;
     position: relative;
 
-
-
-    // .logo_div {
-    //     @include flex-column-center;
-    // }
-
-    .logo {
-
-        width: 100%;
-
-    }
-
     .nav_bar {
         display: flex;
         justify-content: space-between;
@@ -56,10 +44,30 @@ header {
         font-family: "playfair-reg";
         font-size: 18px;
         color: $black;
+        position: sticky;
     }
 
 
 
+
+}
+
+section {
+    display: flex;
+
+
+    .testimonies {
+        @include flex-column-center;
+        margin: 10px 10px;
+    }
+
+    >div {
+
+        p {
+            text-align: justify;
+        }
+
+    }
 
 }
 
@@ -72,6 +80,7 @@ footer {
     justify-content: space-around;
     width: 100%;
     margin-top: 50px;
+    background-color: #666;
 
     .intern-div_footer {
         padding: 10px;
